--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,18 +1,18 @@
-name: Check Last Changes
-
+name: GitHub Actions Test
 on:
   push:
     branches:
       - master
-
 jobs:
   check-last-changes:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
+      repository-projects: write
     steps:
-      - name: Checkout main branch
+      - name: Checkout repository code
         uses: actions/checkout@v4
-        with:
-          ref: master
 
       - name: Get changes
         id: get_changes
