--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -7,7 +7,7 @@ jobs:
   check-last-changes:
     runs-on: ubuntu-latest
     env:
-      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Use the built-in GitHub token for authentication
+      GH_TOKEN: ${{ secrets.TOKEN }}  # Use the built-in GitHub token for authentication
     permissions:
       contents: write
       pull-requests: write
