--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -18,4 +18,4 @@ jobs:
 
       - name: Create
         run: |
-            gh pr create -B master --repo repoA --title "Automated PR: Update from master" --body "This PR was automatically generated to update based on changes in the master branch." --base "master" --head "auto-update-${LAST_COMMIT}"
+            gh pr create -B master --repo Petru1/repoA --title "Automated PR: Update from master" --body "This PR was automatically generated to update based on changes in the master branch." --base "master" --head "auto-update-${LAST_COMMIT}"
