--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Clone other repository
         run: |
              git clone https://github.com/Petru1/repoB.git
-             cd other-repo
+             cd repoB
              git checkout -b new-branch
 
       - name: Push branch to other repository
